feat: add web retention settings
